# raylib-6-gamejam

./: .gitignore  CMakeLists.txt  README.md  damage_matrix.csv
.github/workflows/: build.yml  linux.yml  web.yml  windows.yml
assets/: config.json  muzzles.txt
assets/icons/ui/: art-how.aseprite  art-win.aseprite  icon.aseprite  ui-atlas.aseprite  ui-atlas.json
assets/models/: base_1x2.glb  base_turret.glb  bridge.glb  circle_blue.glb  circle_red.glb  plane.glb  pvo_band.glb  pvo_hull.glb  pvo_launcher.glb  pvo_wheels.glb  shell.glb  smoke.glb  soldier_engineer.glb  soldier_infantry.glb  soldier_rocket.glb  tank_band.glb  tank_hull.glb  tank_turret.glb  tank_wheels.glb  tile_concrete.glb  tile_field.glb  tile_forest.glb  tile_red.glb  tile_swamp.glb  tile_swamp_corner.glb  tile_swamp_edge.glb  tile_white.glb  track_link.glb  tree_bush.glb  tree_pine.glb  tree_round.glb  wall.glb
assets/shaders/glsl100/: blob.frag  blob.vert  crystal.frag  geom.frag  geom.vert  outline.frag  ring.frag  sdf.frag  shadow.vert  toon.frag  toon.vert  vignette.frag  water.frag  water.vert  water_line.frag
assets/shaders/glsl330/: blob.frag  blob.vert  crystal.frag  geom.frag  geom.vert  outline.frag  ring.frag  sdf.frag  shadow.frag  toon.frag  toon.vert  vignette.frag  water.frag  water.vert  water_line.frag
src/: main.cpp  shell.html
src/ai/: policy.cpp  policy.h
src/app/: app.cpp  app.h  entrypoint_desktop.cpp  entrypoint_web.cpp
src/app/core/: app.cpp  app.h  audio_events.cpp  audio_events.h  entrypoint.h
src/app/input/: cursor.h  unit_control.cpp  unit_control.h
src/app/platform/: app.rc  entrypoint_desktop.cpp  entrypoint_web.cpp  window_chrome.cpp  window_chrome.h
src/assets/: pack.cpp  pack.h
src/audio/: sound.cpp  sound.h
src/data/: hex.h  tile.h  time_config.h  vec.h  world_config.h
src/data/app/: app_config.h
src/data/balance/: balance.h  balance_loader.cpp
src/data/card/: card.h  deck_config.h
src/data/economy/: economy.h
src/data/render/: cavity_params.h  hud_params.h  render_params.h  shadow_params.h  vignette_params.h  water_params.h
src/data/scene/: camera_config.h  scene_config.h
src/data/sim/: sim_config.h
src/data/space/: hex.h  world_config.h
src/data/tile/: tile.h
src/data/unit/: damage.h  unit.h  unit_types.h
src/debug/: air_test_scene.cpp  air_test_scene.h  debug_input.cpp  debug_input.h  debug_ui.cpp  debug_ui.h  free_camera.h  preview_scene.cpp  preview_scene.h  projectile_test_scene.cpp  projectile_test_scene.h
src/logic/: deploy.h  game_state.h  map.cpp  map.h  path.cpp  path.h  simulation.cpp  simulation.h
src/logic/cards/: cards.cpp  cards.h
src/logic/sim/: simulation.cpp  simulation.h
src/logic/state/: game_state.h
src/logic/world/: map.cpp  map.h
src/view/: camera_rig.cpp  camera_rig.h  debug_ui.cpp  debug_ui.h  interpolator.h  model_registry.cpp  model_registry.h  renderer.cpp  renderer.h
src/view/anim/: anim_controller.cpp  anim_controller.h  anim_state.h  hit_flash.h
src/view/camera/: camera_rig.cpp  camera_rig.h
src/view/debug/: debug_ui.cpp  debug_ui.h
src/view/effect/: coast_sdf.cpp  coast_sdf.h  outline_effect.cpp  outline_effect.h  shadow_effect.cpp  shadow_effect.h  toon_effect.cpp  toon_effect.h  water.cpp  water.h  water_params.h
src/view/prefab/: base_layout.h  bridge_view.h  coast_sdf.cpp  coast_sdf.h  control_overlay.cpp  control_overlay.h  damage_numbers.cpp  damage_numbers.h  deploy_ring.cpp  deploy_ring.h  heal_wave.cpp  heal_wave.h  hex_grid.cpp  hex_grid.h  hp_bar.cpp  hp_bar.h  model_registry.cpp  plane_orbit.cpp  plane_orbit.h  projectile_view.cpp  projectile_view.h  scene.cpp  scene.h  smoke_view.h  unit_view.cpp  unit_view.h  vehicle_view.cpp  vehicle_view.h  water.cpp  water.h
src/view/prefab/registries/: model_registry.cpp  model_registry.h  muzzle_registry.cpp  muzzle_registry.h  shader_registry.cpp  shader_registry.h  texture_registry.cpp  texture_registry.h
src/view/prefab/ui/: card_view.cpp  card_view.h  details_panel.cpp  details_panel.h  game_over.cpp  game_over.h  hand_view.cpp  hand_view.h  hud_controls.cpp  hud_controls.h  match_timer.cpp  match_timer.h  resource_bar.cpp  resource_bar.h  ui_atlas.cpp  ui_atlas.h  ui_context.h  ui_input.cpp  ui_input.h  ui_text.cpp  ui_text.h  ui_theme.cpp  ui_theme.h  ui_widgets.cpp  ui_widgets.h
src/view/render/: cavity_params.h  render_targets.cpp  render_targets.h  renderer.cpp  renderer.h  shadow_params.h
src/view/space/: hex_decal.h  interpolator.h  orientation.h  world_space.h
tools/: damage_matrix.py  pack_assets.py
tools/scene_shot/: main.cpp
tools/sim_harness/: main.cpp
